Add more sources to the bibliography and fix notes

--- a/main.bib
+++ b/main.bib
@@ -565,3 +565,147 @@ title = {{The New Palgrave Dictionary of Money {\&} Finance}},
 url = {http://link.springer.com/10.1007/978-1-349-11721-5},
 year = {1992}
 }
+@article{Timmermann2004,
+abstract = {The efficient market hypothesis gives rise to forecasting tests that mirror those adopted when testing the optimality of a forecast in the context of a given information set. However, there are also important differences arising from the fact that market efficiency tests rely on establishing profitable trading opportunities in 'real time'. Forecasters constantly search for predictable patterns and affect prices when they attempt to exploit trading opportunities. Stable forecasting patterns are therefore unlikely to persist for long periods of time and will self-destruct when discovered by a large number of investors. This gives rise to non-stationarities in the time series of financial returns and complicates both formal tests of market efficiency and the search for successful forecasting approaches. {\textcopyright} 2003 International Institute of Forecasters. Published by Elsevier B.V. All rights reserved.},
+author = {Timmermann, Allan and Granger, Clive W.J.},
+doi = {10.1016/S0169-2070(03)00012-8},
+file = {:Users/antares/Documents/CIMAT/thesis/papers/finance/Efficient market hypothesis and forecasting.pdf:pdf},
+isbn = {0169-2070},
+issn = {01692070},
+journal = {International Journal of Forecasting},
+keywords = {Efficient market hypothesis,Forecast evaluation,Learning,Model specification},
+mendeley-groups = {CIMAT/Thesis},
+number = {1},
+pages = {15--27},
+title = {{Efficient market hypothesis and forecasting}},
+volume = {20},
+year = {2004}
+}
+@book{Shanmugam2016,
+abstract = {Some of the key mathematical results are stated without proof in order to make the underlying theory accessible to a wider audience. The book assumes a knowledge only of basic calculus, matrix algebra, and elementary statistics. The emphasis is on methods and the analysis of data sets. The logic and tools of model-building for stationary and nonstationary time series are developed in detail and numerous exercises, many of which make use of the included computer package, provide the reader with ample opportunity to develop skills in this area. The core of the book covers stationary processes, ARMA and ARIMA processes, multivariate time series and state-space models, with an optional chapter on spectral analysis. Additional topics include harmonic regression, the Burg and Hannan-Rissanen algorithms, unit roots, regression with ARMA errors, structural models, the EM algorithm, generalized state-space models with applications to time series of count data, exponential smoothing, the Holt-Winters and ARAR forecasting algorithms, transfer function models and intervention analysis. Brief introductions are also given to cointegration and to nonlinear, continuous-time and long-memory models. The time series package included in the back of the book is a slightly modified version of the package ITSM, published separately as ITSM for Windows, by Springer-Verlag, 1994. It does not handle such large data sets as ITSM for Windows, but like the latter, runs on IBM-PC compatible computers under either DOS or Windows (version 3.1 or later). The programs are all menu-driven so that the reader can immediately apply the techniques in the book to time series data, with a minimal investment of time in the computational and algorithmic aspects of the analysis.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1011.1669v3},
+author = {Shanmugam, Ramalingam and Brockwell, Peter J. and Davis, Richard A.},
+booktitle = {Technometrics},
+doi = {10.2307/1271510},
+eprint = {arXiv:1011.1669v3},
+file = {:Users/antares/Documents/CIMAT/thesis/papers/finance/Introduction to Time Series and Forecasting by Peter J. Brockwell and Richard A. Davis.pdf:pdf},
+isbn = {978-3-319-29852-8},
+issn = {00401706},
+mendeley-groups = {CIMAT/Thesis},
+number = {4},
+pages = {426},
+pmid = {708181},
+title = {{Introduction to Time Series and Forecasting}},
+url = {http://www.jstor.org/stable/1271510?origin=crossref},
+volume = {39},
+year = {2016}
+}
+@article{Hong2014,
+abstract = {Value-at-risk (VaR) and conditional value-at-risk (CVaR) are two widely used risk measures of large losses and are employed in the financial industry for risk management purposes. In practice, loss distributions typically do not have closed-form expressions, but they can often be simulated (i.e., random observations of the loss distribution may be obtained by running a computer program). Therefore, Monte Carlo methods that design simulation experiments and utilize simulated observations are often employed in estimation, sensitivity analysis, and optimization of VaRs and CVaRs. In this article, we review some of the recent devel- opments in these methods, provide a unified framework to understand them, and discuss their applications in financial risk management.},
+archivePrefix = {arXiv},
+arxivId = {1308.0889},
+author = {Hong, L. Jeff and Hu, Zhaolin and Liu, Guangwu},
+doi = {10.1145/2661631},
+eprint = {1308.0889},
+file = {:Users/antares/Documents/CIMAT/thesis/papers/finance/Monte Carlo Methods for Value-at-Risk and Conditional Value-at-Risk - A Review.pdf:pdf},
+isbn = {1220130087},
+issn = {10493301},
+journal = {ACM Transactions on Modeling and Computer Simulation},
+mendeley-groups = {CIMAT/Thesis},
+number = {4},
+pages = {1--37},
+title = {{Monte Carlo Methods for Value-at-Risk and Conditional Value-at-Risk}},
+url = {http://dl.acm.org/citation.cfm?doid=2617568.2661631},
+volume = {24},
+year = {2014}
+}
+@misc{Strong2009,
+abstract = {The fundamental principles of financial risk assessment are discussed, with primary emphasis on using simulation to evaluate and compare alternative investments. First we introduce the key measures of performance for such investments, including net present value, internal rate of return, and modified internal rate of return. Next we discuss types of risk and the key measures of risk, including expected present value; the mean, standard deviation, and coefficient of variation of the rate of return; and the risk premium. Finally we detail the following applications: (i) stand-alone risk assessment for a capital-budgeting problem; (ii) comparison of risk-free and risky investment strategies designed merely to keep up with the cost of living; (iii) value-at-risk (VAR) analysis for a single-stock investment; (iv) VAR analyses for two-asset portfolios consisting of stock and either call or put options; and (v) VAR analyses for two-asset portfolios consisting of both puts and calls.},
+author = {Strong, Robert A. and Steiger, Natalie M. and Wilson, James R.},
+booktitle = {Proceedings - Winter Simulation Conference},
+doi = {10.1109/WSC.2009.5429323},
+file = {:Users/antares/Documents/CIMAT/thesis/papers/finance/Introduction to financial risk assessment using monte carlo simulation.pdf:pdf},
+isbn = {9781424457700},
+issn = {08917736},
+mendeley-groups = {CIMAT/Thesis},
+pages = {99--118},
+title = {{Introduction to financial risk assessment using Monte Carlo simulation}},
+year = {2009}
+}
+@book{Bandy2015,
+address = {Eugene, Oregon, US},
+author = {Bandy, Howard B.},
+edition = {First},
+isbn = {9780979183850},
+keywords = {trading,trading management,trading strategies,trading system development},
+mendeley-groups = {CIMAT/Thesis},
+mendeley-tags = {trading system development,trading management,trading,trading strategies},
+publisher = {Blue Owl Press, Inc.},
+title = {{Quantitative Technical Analysis}},
+year = {2015}
+}
+@misc{Bloomberg2018,
+author = {Bloomberg},
+booktitle = {Bloomberg L.P.},
+mendeley-groups = {CIMAT/Thesis},
+title = {{S{\&}P 500 Index - Bloomberg}},
+url = {https://www.bloomberg.com/quote/SPX:IND},
+urldate = {2011-08-20},
+year = {2018}
+}
+@misc{Shiller2016,
+author = {Shiller, Robert},
+booktitle = {GitHub},
+mendeley-groups = {CIMAT/Thesis},
+title = {{Investing Returns on the S{\&}P500}},
+urldate = {October 2018},
+year = {2016}
+}
+@book{Fabozzi2010,
+author = {Fabozzi, Frank J. and Modigliani, Franco P. and Jones, Frank J.},
+edition = {Fourth},
+isbn = {9780136135319},
+mendeley-groups = {CIMAT/Thesis},
+publisher = {Prentice Hall},
+title = {{Foundations of Financial Markets and Institutions}},
+year = {2010}
+}
+@article{Hendershott2011,
+author = {Hendershott, Terrence and Jones, Charles M. and Menkveld, Albert J.},
+doi = {10.1111/j.1540-6261.2010.01624.x},
+issn = {00221082},
+journal = {The Journal of Finance},
+mendeley-groups = {CIMAT/Thesis},
+month = {feb},
+number = {1},
+pages = {1--33},
+title = {{Does Algorithmic Trading Improve Liquidity?}},
+url = {http://doi.wiley.com/10.1111/j.1540-6261.2010.01624.x},
+volume = {66},
+year = {2011}
+}
+@book{Taleb2005,
+author = {Taleb, Nassim Nicholas},
+edition = {Second},
+isbn = {0812975219},
+mendeley-groups = {CIMAT/Thesis},
+publisher = {Penguin Random House LLC},
+title = {{Fooled by randomness: the hidden role of of chance in life and in the markets}},
+year = {2005}
+}
+@inproceedings{Bajpai2017,
+address = {New York, New York, USA},
+author = {Bajpai, Vaibhav and K{\"{u}}hlewind, Mirja and Ott, J{\"{o}}rg and Sch{\"{o}}nw{\"{a}}lder, J{\"{u}}rgen and Sperotto, Anna and Trammell, Brian},
+booktitle = {Proceedings of the Reproducibility Workshop on ZZZ - Reproducibility '17},
+doi = {10.1145/3097766.3097767},
+isbn = {9781450350600},
+keywords = {thesisc2},
+mendeley-groups = {CIMAT/Thesis},
+mendeley-tags = {thesisc2},
+pages = {1--4},
+publisher = {ACM Press},
+title = {{Challenges with Reproducibility}},
+url = {http://dl.acm.org/citation.cfm?doid=3097766.3097767},
+year = {2017}
+}
